# TankMaster

./: .gitignore  CMakeLists.txt  TankMaster.sln
TankMaster/: TankMaster.filters  TankMaster.sln  TankMaster.vcxproj
TankMaster/engine/EntityType/: EnityType.h  EntityType.cpp
TankMaster/engine/entities/MovableObject/: MovableObject.cpp  MovableObject.h
TankMaster/engine/entities/Tank/: Tank.cpp  Tank.h
TankMaster/gui/: constants.h
TankMaster/gui/GameView/: GameView.cpp  GameView.h
TankMaster/gui/TextureLoader/: TextureLoader.cpp  TextureLoader.h
TankMaster/main/: TankMaster.cpp  sampleWall.cpp
TankMaster/util/geometry_functions/: geometry_functions.cpp  geometry_functions.h
TcpGameHost/: TcpGameHost.cpp  TcpGameHost.h
UdpGameHost/: UdpGameHost.cpp  UdpGameHost.h
engine/EntityType/: EntityType.cpp  EntityType.h
engine/Game/: Game.cpp  Game.h
engine/entities/Block/: Block.cpp  Block.h
engine/entities/Booster/: Booster.cpp  Booster.h
engine/entities/Bullet/: Bullet.cpp  Bullet.h  consts.h
engine/entities/MovableBlock/: MovableBlock.cpp  MovableBlock.h
engine/entities/MovableObject/: MovableObject.cpp  MovableObject.h
engine/entities/Tank/: Tank.cpp  Tank.h  consts.h
gui/: constants.h
gui/Button/: Button.cpp  Button.h  consts.h
gui/GameDrawer/: GameDrawer.cpp  GameDrawer.h
gui/GameView/: GameView.cpp
gui/Loader/: Loader.h
gui/MainMenu/: MainMenu.cpp  MainMenu.h  consts.h
gui/MultiplayerGame/: MultiplayerGame.cpp  MultiplayerGame.h
gui/Registry/: Registry.cpp  Registry.h  consts.h
gui/SingleGame/: SingleGame.cpp  SingleGame.h  consts.h
gui/SingleGame/TankController/: TankController.cpp  TankController.h
gui/TcpMultiplayerGame/: TcpMultiplayerGame.cpp  TcpMultiplayerGame.h  consts.h
gui/TextureLoader/: TextureLoader.cpp  TextureLoader.h
gui/UdpMultiplayerGame/: UdpMultiplayerGame.cpp  UdpMultiplayerGame.h  consts.h
gui/Window/: Window.cpp  Window.h
main/: TankMaster.cpp  TankMasterClient.cpp  TankMasterServer.cpp  sampleWall.cpp
maps/: Map.cpp  Map.h  map1.json  map2.json  maps_generator.cpp
mongoose/: mongoose.cpp  mongoose.h
registry/: consts.h  main.cpp  server.cpp  test_ws.cpp
registry/API/: RegistryApi.cpp  RegistryApi.h
registry/Room/: Room.cpp  Room.h
registry/TcpGameHost/: TcpGameHost.cpp  TcpGameHost.h
server/: TcpRoom.cpp  TcpRoom.h  UdpRoom.cpp  UdpRoom.h
util/Address/: Address.h
util/InitializeValue/: InitializeValue.h
util/IpAddress/: IpAddress.h
util/Loader/: Loader.h
util/geometry/: constants.h
util/geometry/Line/: Line.cpp  Line.h
util/geometry/Segment/: Segment.cpp  Segment.h
util/geometry/Vector/: Vector.cpp  Vector.h
util/geometry/general_functions/: general_functions.cpp  general_functions.h
util/geometry_functions/: geometry_functions.cpp  geometry_functions.h
web/User/: User.cpp  User.h
